# uONT

./: .gitignore  README.md  meta.yaml  mkdocs.yml  pixi.toml  pyproject.toml
.github/workflows/: conda-publish.yml  docs.yaml
conda/: meta.yaml
docs/: developer.md  index.md  main.py  performance.md
docs/api/: cli.md  jobs.md  process.md  workflow.md
docs/assets/: assembly_qc.csv  execution_times.csv  total_execution_times.csv
galaxy/: galaxy.md  uont_assemble.xml
src/uont/: __init__.py  cli.py  jobs.py  process.py  qc.py  types.py  utils.py  workflow.py
src/uont/data/: genome-sizes.csv
