[build-system]
requires = ["flit_core >=3.11,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "uont"
authors = []
license = "MIT"
license-files = ["LICENSE"]
dynamic = ["version", "description"]
dependencies = [
    "PyYAML",
    "openpyxl",
    "pandas",
    "pathogenprofiler-core",
    "rich",
    "rich-argparse",
    "tqdm",
]

[project.scripts]
uONT = "uont:cli_uONT"